--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "gendiff"
+name = "alexofechoes_gendiff"
 version = "0.1.0"
 description = "Gendiff - hexlet second project"
 authors = ["Alexander Bukharin <alexawm182@gmail.com>"]
@@ -12,10 +12,11 @@ repository = "https://github.com/alexofechoes/python-project-lvl2"
 python = "^3.7"
 
 [tool.poetry.dev-dependencies]
+pytest = "^5.1"
+
+[tool.poetry.scripts]
+gendiff = "gendiff.cli:main"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
-[tool.poetry.scripts]
-gendiff = "gendiff.cli:main"
