--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
+wemake-python-styleguide = "^0.12.4"
+black = {version = "^18.3-alpha.0",allows-prereleases = true}
+flake8 = "^3.7"
 
 [tool.poetry.scripts]
 gendiff = "gendiff.cli:main"
