--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ ignore =
 per-file-ignores =
   # it is possibble to have prints in scripts
   gendiff/cli.py: T001
+  tests/*.py: S101 D100 D103
 
 [tool:pytest]
 norecursedirs = *.egg .eggs dist .git __pycache__
