--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/alexofechoes/python-project-lvl2"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+pyyaml = "^5.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.1"
