--- a/setup.cfg
+++ b/setup.cfg
@@ -23,12 +23,14 @@ ignore =
   WPS110
   WPS204
   WPS210
+  WPS226
   WPS410
   WPS412
 
 per-file-ignores =
   # it is possibble to have prints in scripts
   gendiff/cli.py: T001
+  gendiff/renderers.py: C901
   tests/*.py: S101 D100 D103
 
 [tool:pytest]
