--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ ignore =
 per-file-ignores =
   # it is possibble to have prints in scripts
   gendiff/cli.py: T001
-  gendiff/renderers.py: C901
+  gendiff/formatters/*.py: C901
   tests/*.py: S101 D100 D103
 
 [tool:pytest]
