--- a/setup.cfg
+++ b/setup.cfg
@@ -15,24 +15,22 @@ enable-extensions = G
 isort-show-traceback = True
 
 ignore =
-  # it is ok to have some magical numbers here
-  S001
-  S311
-  Z210
-  Z432
-  WPS110
-  WPS204
-  WPS210
-  WPS221
-  WPS226
-  WPS410
-  WPS412
+  WPS110 # Found wrong variable name (item, value, result, etc)
+  WPS221 # Found line with high Jones Complexity (f -> Dict[str, Any])
+  WPS407 # Found mutable module constant
+  WPS410 # Found wrong metadata variable: __all__
+  WPS412 # Found `__init__.py` module with logic
 
 per-file-ignores =
-  # it is possibble to have prints in scripts
-  gendiff/cli.py: T001
-  gendiff/formatters/*.py: C901
-  tests/*.py: S101 D100 D103
+  # WPS210 Found too many local variables
+  gendiff/ast.py: WPS210
+
+  # T001 print found
+  gendiff/cli.py: T001 
+
+  # C901 '_build_message' is too complex
+  # WPS210 Found too many local variables
+  gendiff/formatters/*.py: C901 WPS210
 
 [tool:pytest]
 norecursedirs = *.egg .eggs dist .git __pycache__
